// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CollectionsEmpty - Snapshots > matches snapshot on another user profile 1`] = `
<div
  data-testid="empty-state"
>
  <div
    data-alt="Collections - Empty state"
    data-src="/images/notifications-empty-state.webp"
    data-testid="image"
  />
  <svg
    aria-hidden="true"
    class="lucide lucide-library"
    data-testid="library-icon"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="m16 6 4 14"
    />
    <path
      d="M12 6v14"
    />
    <path
      d="M8 8v12"
    />
    <path
      d="M4 4v16"
    />
  </svg>
  <h3>
    No collections yet
  </h3>
  <p>
    This user hasn't created any collections yet.
  </p>
</div>
`;

exports[`CollectionsEmpty - Snapshots > matches snapshot on own profile 1`] = `
<div
  data-testid="empty-state"
>
  <div
    data-alt="Collections - Empty state"
    data-src="/images/notifications-empty-state.webp"
    data-testid="image"
  />
  <svg
    aria-hidden="true"
    class="lucide lucide-library"
    data-testid="library-icon"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="m16 6 4 14"
    />
    <path
      d="M12 6v14"
    />
    <path
      d="M8 8v12"
    />
    <path
      d="M4 4v16"
    />
  </svg>
  <h3>
    No collections yet
  </h3>
  <p>
    Curate ideas, filter signal from noise, and share what matters.
  </p>
  <div
    data-testid="dialog-new-collection"
  >
    <button
      class="inline-flex items-center justify-center whitespace-nowrap text-sm transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*=\\"size-\\"])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/40 aria-invalid:border-destructive font-semibold cursor-pointer rounded-full border shadow-xs bg-brand/16 text-brand hover:!bg-brand/30 border-brand h-10 px-4 py-2 has-[>svg]:px-4 gap-2"
      data-cy="profile-collections-empty-create-collection"
      data-size="default"
      data-slot="button"
      data-variant="default"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-plus size-4"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M5 12h14"
        />
        <path
          d="M12 5v14"
        />
      </svg>
      <span
        data-testid="typography"
      >
        Create Collection
      </span>
    </button>
  </div>
</div>
`;
